0.97c

* Tweaked the default website icon logic to verify it's an image.
* Added Lifestream::validate_image($url).

0.97b

* Added get_event_display($event, $bit) method to extensions.
* Updated all labels to use get_event_display instead of $bit['title'].
* Fixed mouseover timestamp on event times.

0.97a

* Added an option for automatic favicon fetching.

0.97

* All strings should now be localized.
* Fixed an issue where feeds were default to version 1, version 2 is GUID keys.
* Added an option for the length to truncate blog/comment blurbs.
* Website URL option will now also be used for the link in BlogFeed's.
* Hide label option has been removed and is only used on a per-feed basis if it's valid.
* CAN_LABEL and MUST_LABEL are obsolete. There is no more option to hide labels (since labels are now data).
* Moved most logic from LifeStream_Feed into LifeStream_Extension.
* Added default favicon support to all feed extensions.

0.96c

* Fix for RSS feed labels and rendering.
* Updated Identi.ca icon.
* Added hash tag link to Identi.ca extension.
* Fix for Tumblr feeds causing fatal error.
* Truncating blog posts and comments to 128 characters.
* Escaping html entities properly in new rendering.
* Added website url option to Blog extension.

0.96b

* Fixed Last.FM feed.
* ListenLabel now requires artist and name values.

0.96a

* Fixed an issue with get_icon_url on the errors page.
* Fixed an issue which was causing the rss feed to error.
* Updated the daily digest template.

0.96

* Overhauled lifestream display to be more precise and compact.
* Labels are now separate from extensions, and should be reused.
* get_label() replaces all other label methods on feed extensions.
* Backtype no longer requires you to fill in sites to filter out.
* Removed Pownce extension.
* Events from missing extensions are now ignored, rather than causing an error.
* Feeds can now be marked as CAN_LABEL = false.
* Twitter-based feeds can now longer have labels, or be grouped.